--- a/experiments/text_exploration.ipynb
+++ b/experiments/text_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98c6fe9e",
+   "id": "bf7ff2fa",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de180991",
+   "id": "42ec13cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97e93e68",
+   "id": "8f4569d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65a49333",
+   "id": "c9dc2db1",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f606e22",
+   "id": "469c14fb",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "78f2ffbe",
+   "id": "e272950b",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41cc5f24",
+   "id": "41628c78",
    "metadata": {},
    "outputs": [
     {
@@ -195,13 +195,13 @@
     }
    ],
    "source": [
-    "mytext.convert_integer2strin([12,42,12,0,54])"
+    "mytext.convert_integer2string([12,42,12,0,54])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a3ec1744",
+   "id": "ac1bdbe4",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bda05d6",
+   "id": "2c198456",
    "metadata": {},
    "outputs": [],
    "source": []
