--- a/experiments/text_exploration.ipynb
+++ b/experiments/text_exploration.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e272950b",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "[46, 43, 50, 50, 53, 3]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "'?d?\\np'"
+       "'?eI\\np'"
       ]
      },
      "execution_count": 9,
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "mytext.convert_integer2string([12,42,12,0,54])"
+    "mytext.convert_integer2string([12,43,21,0,54])"
    ]
   },
   {
@@ -230,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -245,6 +245,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+   }
   }
  },
  "nbformat": 4,
