verify loss in notebook

--- a/experiments/run_bigram.ipynb
+++ b/experiments/run_bigram.ipynb
@@ -10,7 +10,7 @@
      "data": {
       "text/plain": [
        "['../',\n",
-       " '/home/experiments',\n",
+       " '/workspaces/lets_build_gpt_video/experiments',\n",
        " '/opt/conda/lib/python310.zip',\n",
        " '/opt/conda/lib/python3.10',\n",
        " '/opt/conda/lib/python3.10/lib-dynload',\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "b969f55e",
    "metadata": {},
    "outputs": [
@@ -312,12 +312,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 8]) torch.Size([4, 8])\n"
+      "torch.Size([1, 1]) torch.Size([1, 1])\n"
      ]
     }
    ],
    "source": [
-    "x, y = mytext.get_batch(batch_size=4, block_size=8)\n",
+    "x, y = mytext.get_batch(batch_size=1, block_size=1)\n",
     "print(x.shape, y.shape)"
    ]
   },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "f0a955f6",
    "metadata": {},
    "outputs": [],
@@ -341,17 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "30a1d2ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([4, 8, 65])"
+       "torch.Size([1, 1, 65])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,20 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "d2c6dd34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[39, 63,  0, 20, 43,  1, 61, 47],\n",
-       "        [17, 26, 32, 21, 27, 10,  0, 32],\n",
-       "        [50, 47, 43, 58,  6,  1, 42, 43],\n",
-       "        [49,  1, 54, 56, 53, 50, 53, 45]])"
+       "tensor([[57]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,20 +383,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
+   "id": "11c68ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-1.0753,  1.5960, -0.4933, -1.5125, -0.6859,  2.1488,  0.7583,\n",
+       "           0.0646, -0.1039, -0.0203,  0.2146, -0.2113,  2.8601, -0.2341,\n",
+       "           1.4244, -0.8805,  0.1553,  0.4215, -1.8016, -2.5945, -0.5096,\n",
+       "          -1.8330, -0.5631, -0.8241, -1.5637,  0.1423,  0.6050,  1.3279,\n",
+       "           1.9516, -0.0328,  1.0525, -0.6936, -0.0911,  1.1999, -0.2730,\n",
+       "          -0.8519,  1.9794,  1.0762, -0.3889, -0.7567,  0.2091, -0.0536,\n",
+       "           0.2406, -0.6260,  1.8268, -0.1958,  1.3177, -0.5051, -0.2255,\n",
+       "          -0.2819, -0.5762, -0.7471, -1.3303,  1.7357,  0.0244, -0.7032,\n",
+       "          -0.4997,  0.7347, -0.0920, -0.9142, -1.1670,  0.8645,  0.2127,\n",
+       "          -0.9399,  0.5576]]], grad_fn=<EmbeddingBackward0>)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "adb3fba5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[63,  0, 20, 43,  1, 61, 47, 57],\n",
-       "        [26, 32, 21, 27, 10,  0, 32, 46],\n",
-       "        [47, 43, 58,  6,  1, 42, 43, 39],\n",
-       "        [ 1, 54, 56, 53, 50, 53, 45, 59]])"
+       "tensor([[46]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,17 +434,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "c9e4fbe6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(4.2109, grad_fn=<NllLossBackward0>)"
+       "tensor(3.4730, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,8 +455,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f96d5656",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[3.4730]], grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify loss in the case batch_size=1, block_size=1\n",
+    "-(model(x).exp()/model(x).exp().sum())[0, 0, y].log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "120e0a6b",
    "metadata": {},
    "outputs": [],
    "source": []
