--- a/experiments/run_bigram.ipynb
+++ b/experiments/run_bigram.ipynb
@@ -477,8 +477,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "120e0a6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([18, 47, 56,  ..., 43, 56, 43])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb501d14",
    "metadata": {},
    "outputs": [],
    "source": []
