expand example with matmul

--- a/experiments/bag_of_words.ipynb
+++ b/experiments/bag_of_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "0b321b8c-59ad-47e2-a5aa-37359ab789e3",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "30245feb-7ba7-4181-b2d9-2386475044cf",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
        "torch.Size([3, 5, 2, 3])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "8263131f-2ade-47c0-90fa-9263a402bcd5",
    "metadata": {
     "tags": []
@@ -66,11 +66,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1741,  0.0415,  0.1401],\n",
-       "        [ 1.2030, -0.1890,  1.3176]])"
+       "tensor([[ 0.6361, -0.3220,  1.7799],\n",
+       "        [ 2.2120, -1.2736,  0.7472]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "ab5d1e88-f165-44de-aacd-7a1a1e0a5dc3",
    "metadata": {
     "tags": []
@@ -90,17 +90,43 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1741,  0.0415,  0.1401],\n",
-       "        [ 1.2030, -0.1890,  1.3176]])"
+       "tensor([[ 0.6361, -0.3220,  1.7799],\n",
+       "        [ 2.2120, -1.2736,  0.7472]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "D[1, 2, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d77a3911-e087-4dab-b60a-6183e3687561",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 6, 4, 2])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reverse the order\n",
+    "C = torch.randn(6, 4, 2)\n",
+    "D = C @ B\n",
+    "D.shape"
    ]
   },
   {
