--- a/experiments/run_bigram.ipynb
+++ b/experiments/run_bigram.ipynb
@@ -87,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f0a955f6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "model = BiGram(vocab_size=mytext.vocab_size)"
+    "model = BiGram(vocab_size=mytext.vocab_size, dim_token_embedding=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8e8c5bdb-683e-454a-a328-db0352f092fb",
    "metadata": {
     "tags": []
@@ -109,11 +109,12 @@
      "data": {
       "text/plain": [
        "BiGram(\n",
-       "  (embedding): Embedding(65, 65)\n",
+       "  (embedding): Embedding(65, 32)\n",
+       "  (map_token_embedding_to_token): Linear(in_features=32, out_features=65, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(4.8305, grad_fn=<NllLossBackward0>)"
+       "tensor(4.7501, grad_fn=<NllLossBackward0>)"
       ]
      },
      "execution_count": 9,
@@ -510,7 +511,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[4.8305]], grad_fn=<NegBackward0>)"
+       "tensor([[4.7501]], grad_fn=<NegBackward0>)"
       ]
      },
      "execution_count": 10,
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "120e0a6b",
    "metadata": {
     "tags": []
@@ -542,32 +543,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: train_loss = 143636.93052005768, eval_loss = 15974.912975788116\n",
-      "Epoch 100: train_loss = 113880.17996120453, eval_loss = 12689.927784204483\n",
-      "Epoch 200: train_loss = 96472.9219174385, eval_loss = 10764.42335319519\n",
-      "Epoch 300: train_loss = 87357.67544484138, eval_loss = 9757.632342100143\n",
-      "Epoch 400: train_loss = 82986.90327000618, eval_loss = 9278.699217319489\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtext\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmytext\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnb_epochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mblock_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1e-2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43meval_interval\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/experiments/../src/bigram.py:68\u001b[0m, in \u001b[0;36mBiGram.train\u001b[0;34m(self, nb_epochs, text, batch_size, block_size, learning_rate, eval_interval)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m split \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m     64\u001b[0m     text_iterator \u001b[38;5;241m=\u001b[39m text\u001b[38;5;241m.\u001b[39miterator_all(\n\u001b[1;32m     65\u001b[0m         batch_size\u001b[38;5;241m=\u001b[39mbatch_size,\n\u001b[1;32m     66\u001b[0m         split\u001b[38;5;241m=\u001b[39msplit,\n\u001b[1;32m     67\u001b[0m     )\n\u001b[0;32m---> 68\u001b[0m     _all_losses \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     69\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mforward(bb[\u001b[38;5;241m0\u001b[39m]), bb[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     70\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m bb \u001b[38;5;129;01min\u001b[39;00m text_iterator\n\u001b[1;32m     71\u001b[0m     ]\n\u001b[1;32m     72\u001b[0m     loss_split[split] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(_all_losses)\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: train_loss = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss_split[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, eval_loss = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss_split[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     75\u001b[0m )\n",
-      "File \u001b[0;32m/home/experiments/../src/bigram.py:69\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m split \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m     64\u001b[0m     text_iterator \u001b[38;5;241m=\u001b[39m text\u001b[38;5;241m.\u001b[39miterator_all(\n\u001b[1;32m     65\u001b[0m         batch_size\u001b[38;5;241m=\u001b[39mbatch_size,\n\u001b[1;32m     66\u001b[0m         split\u001b[38;5;241m=\u001b[39msplit,\n\u001b[1;32m     67\u001b[0m     )\n\u001b[1;32m     68\u001b[0m     _all_losses \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m---> 69\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbb\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m, bb[\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     70\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m bb \u001b[38;5;129;01min\u001b[39;00m text_iterator\n\u001b[1;32m     71\u001b[0m     ]\n\u001b[1;32m     72\u001b[0m     loss_split[split] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(_all_losses)\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mprint\u001b[39m(\n\u001b[1;32m     74\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: train_loss = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss_split[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, eval_loss = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss_split[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     75\u001b[0m )\n",
-      "File \u001b[0;32m/home/experiments/../src/bigram.py:18\u001b[0m, in \u001b[0;36mBiGram.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvocab_size \u001b[38;5;241m=\u001b[39m vocab_size\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membedding \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mEmbedding(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvocab_size, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvocab_size)\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, x: torch\u001b[38;5;241m.\u001b[39mTensor):\n\u001b[1;32m     19\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"x.shape = (B, T)\"\"\"\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39membedding(x)  \u001b[38;5;66;03m# shape (B, T, self.vocab_size)\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 0: train_loss = 78469.14244246483, eval_loss = 8813.000763297081\n"
      ]
     }
    ],
    "source": [
     "model.train(\n",
     "    text=mytext,\n",
-    "    nb_epochs=10000,\n",
+    "    nb_epochs=5, # 3000\n",
     "    batch_size=32,\n",
     "    block_size=8,\n",
     "    learning_rate=1e-2,\n",
