revert bigram to simpler model and create copy to modify

--- a/experiments/run_bigram.ipynb
+++ b/experiments/run_bigram.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b076a305-c4cf-4d80-b594-6ce1ca012c51",
+   "metadata": {},
+   "source": [
+    "# Preamble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bf7ff2fa",
@@ -87,19 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f0a955f6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "model = BiGram(vocab_size=mytext.vocab_size, dim_token_embedding=32)"
+    "model = BiGram(vocab_size=mytext.vocab_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8e8c5bdb-683e-454a-a328-db0352f092fb",
    "metadata": {
     "tags": []
@@ -109,12 +117,11 @@
      "data": {
       "text/plain": [
        "BiGram(\n",
-       "  (embedding): Embedding(65, 32)\n",
-       "  (map_token_embedding_to_token): Linear(in_features=32, out_features=65, bias=True)\n",
+       "  (embedding): Embedding(65, 65)\n",
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a0ab8e28-b0e5-4389-b7b2-d8b3be2d284d",
    "metadata": {
     "tags": []
@@ -479,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c9e4fbe6",
    "metadata": {
     "tags": []
@@ -488,10 +495,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor(4.7501, grad_fn=<NllLossBackward0>)"
+       "tensor(5.0175, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f96d5656",
    "metadata": {
     "tags": []
@@ -511,10 +518,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[4.7501]], grad_fn=<NegBackward0>)"
+       "tensor([[5.0175]], grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "120e0a6b",
    "metadata": {
     "tags": []
@@ -543,7 +550,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: train_loss = 78469.14244246483, eval_loss = 8813.000763297081\n"
+      "Epoch 0: train_loss = 146407.44492697716, eval_loss = 16246.42334651947\n",
+      "Epoch 1: train_loss = 146066.80329704285, eval_loss = 16209.37692642212\n",
+      "Epoch 2: train_loss = 145713.6769425869, eval_loss = 16170.905638694763\n",
+      "Epoch 3: train_loss = 145351.81353497505, eval_loss = 16131.56865119934\n",
+      "Epoch 4: train_loss = 144989.84045171738, eval_loss = 16092.295805454254\n"
      ]
     }
    ],
@@ -554,7 +565,7 @@
     "    batch_size=32,\n",
     "    block_size=8,\n",
     "    learning_rate=1e-2,\n",
-    "    eval_interval = 100,\n",
+    "    eval_interval = 1, # 100\n",
     ")"
    ]
   },
