profile train in notebook

--- a/experiments/run_v2.ipynb
+++ b/experiments/run_v2.ipynb
@@ -11,6 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "914862e5-f99e-472a-bb3f-cbbeee3fbfa8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext line_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "bf7ff2fa",
    "metadata": {
     "tags": []
@@ -29,7 +41,7 @@
        " '/opt/conda/lib/python3.10/site-packages/PyYAML-6.0-py3.10-linux-x86_64.egg']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "42ec13cf",
    "metadata": {
     "tags": []
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e57cd007-b590-4c9b-a944-834f5a2080f6",
    "metadata": {
     "tags": []
@@ -72,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "818dca6f-71fd-4eda-b3c8-355aba997427",
    "metadata": {
     "tags": []
@@ -84,7 +96,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8f4569d3",
    "metadata": {
     "tags": []
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f0a955f6",
    "metadata": {
     "tags": []
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8e8c5bdb-683e-454a-a328-db0352f092fb",
    "metadata": {
     "tags": []
@@ -136,7 +148,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,6 +688,109 @@
    ],
    "source": [
     "model.loss(model_x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99035368-72ee-4584-abff-cfdef8a66535",
+   "metadata": {},
+   "source": [
+    "### Profile code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3a204ecc-764f-49d7-b452-10bd2a54310c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def code_to_profile():\n",
+    "    model.train(\n",
+    "        text=mytext,\n",
+    "        nb_epochs=5,\n",
+    "        batch_size=32,\n",
+    "        learning_rate=1e-2,\n",
+    "        eval_interval = 100,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "50ee5a20-8e15-4476-a346-61f16784b206",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-02 12:12:51,031 INFO: Epoch 0: train_loss = 117379.45488739014, eval_loss = 13100.237580537796\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Timer unit: 1e-09 s\n",
+       "\n",
+       "Total time: 18.4048 s\n",
+       "File: /home/experiments/../src/v2.py\n",
+       "Function: train at line 65\n",
+       "\n",
+       "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
+       "==============================================================\n",
+       "    65                                               def train(\n",
+       "    66                                                   self,\n",
+       "    67                                                   nb_epochs: int,\n",
+       "    68                                                   text: TextProcessor,\n",
+       "    69                                                   batch_size: int = 32,\n",
+       "    70                                                   learning_rate: float = 1e-2,\n",
+       "    71                                                   eval_interval: int = 100,\n",
+       "    72                                               ):\n",
+       "    73         1     221500.0 221500.0      0.0          optimizer = torch.optim.AdamW(self.parameters(), lr=learning_rate)\n",
+       "    74         5      41200.0   8240.0      0.0          for ep in range(nb_epochs):\n",
+       "    75         5    1063300.0 212660.0      0.0              optimizer.zero_grad()\n",
+       "    76         5    7837700.0 1567540.0      0.0              x_train, y_train = text.get_batch(\n",
+       "    77         5      40500.0   8100.0      0.0                  batch_size=batch_size, block_size=self.block_size, split=\"train\"\n",
+       "    78                                                       )\n",
+       "    79         5     294400.0  58880.0      0.0              x_train = x_train.to(self.device)\n",
+       "    80         5     142300.0  28460.0      0.0              y_train = y_train.to(self.device)\n",
+       "    81         5    3386200.0 677240.0      0.0              loss = self.loss(logits=self.forward(x_train), y=y_train)\n",
+       "    82         5    1812400.0 362480.0      0.0              loss.backward()\n",
+       "    83         5    2388300.0 477660.0      0.0              optimizer.step()\n",
+       "    84                                           \n",
+       "    85                                                       # Estimate train and validation loss\n",
+       "    86         4      34700.0   8675.0      0.0              if ep % eval_interval == 0:\n",
+       "    87         1      23800.0  23800.0      0.0                  with torch.no_grad():\n",
+       "    88         1       9000.0   9000.0      0.0                      loss_split = {}\n",
+       "    89         2      17200.0   8600.0      0.0                      for split in [\"train\", \"val\"]:\n",
+       "    90         2      20000.0  10000.0      0.0                          text_iterator = text.iterator_all(\n",
+       "    91         2      15900.0   7950.0      0.0                              batch_size=batch_size,\n",
+       "    92         2      16100.0   8050.0      0.0                              split=split,\n",
+       "    93         2      17900.0   8950.0      0.0                              block_size=self.block_size\n",
+       "    94                                                                   )\n",
+       "    95         2     272800.0 136400.0      0.0                          _all_losses = []\n",
+       "    96     34855 8114263200.0 232800.6     44.1                          for bb in text_iterator:\n",
+       "    97     34855  391234700.0  11224.6      2.1                              x, y = bb\n",
+       "    98     34855 6142456200.0 176228.8     33.4                              model_x = self.forward(x)\n",
+       "    99     34855  787087400.0  22581.8      4.3                              logger.debug(f\"x.shape = {x.shape}, y.shape={y.shape}, model_x.shape = {model_x.shape}\")\n",
+       "   100     34855 2950484600.0  84650.3     16.0                              _all_losses.append(self.loss(model_x, y).item())\n",
+       "   101         2     309200.0 154600.0      0.0                          loss_split[split] = sum(_all_losses)\n",
+       "   102         1    1332200.0 1332200.0      0.0                      logger.info(\n",
+       "   103         1      19000.0  19000.0      0.0                          f\"Epoch {ep}: train_loss = {loss_split['train']}, eval_loss = {loss_split['val']}\"\n",
+       "   104                                                               )"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%lprun -f model.train code_to_profile()"
    ]
   },
   {
